# rust-data-processing-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  basic_csv_for_testing.csv  setup.md  temp_file.csv
src/: main.rs
src/config/: routes.rs
src/models/: entries.rs  record_batch.rs
src/services/: _StackOverflowSupport.md  data_fixed_csv.rs  data_processing.rs  entries.rs  mod.rs
src/services/archive/: data_fusion copy.rs  data_fusion_BROKEN.rs  schema_from_record_object
src/static_pages/: home.rs
