[package]
name = "rust-actixweb-api"
version = "0.1.0"
authors = ["Jason Melman <jasonm@seoworkflows.com>"]
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix_extract_multipart = "1.2.0"
actix-multipart = "0.4.0"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
datafusion = "16.0.0"
bytes = "1.3.0"
futures-util = "0.3.25"
env_logger = "0.10.0"
arrow = "31.0.0"